force-app/main/default/objects/Sales_Target__c/fields/TSR_Bonus_Commission_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>TSR_Bonus_Commission_Multiplier__c</fullName>
    <formula>IF( ISPICKVAL( Team__c , &quot;Territory Sales&quot; ) ,
    

/*Prior to 7/1/17 no 4 sale minimum for tiers*/
IF( Target_Date__c &lt; DATE( 2017, 07, 01 ) ,
IF( Sales_Rep_Revenue_Credit__c &gt;= TSR_Third_Tier__c , 2.5 , IF( Sales_Rep_Revenue_Credit__c &gt;= TSR_Second_Tier__c, 2 , 1 )) ,

IF( Sales_Rep_Revenue_Credit__c &gt;= TSR_Third_Tier__c &amp;&amp;  Sales_Rep_Tier_Qualify_Sales_Credit__c &gt;= 4 , 2.5 , IF( Sales_Rep_Revenue_Credit__c &gt;= TSR_Second_Tier__c &amp;&amp; Sales_Rep_Tier_Qualify_Sales_Credit__c &gt;= 4 , 2 , 1 ))) , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TSR Bonus &amp; Commission Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>