force-app/main/default/objects/Sales_Target__c/fields/TSR_Second_Tier__c.field-meta.xml
<CustomField>
    <fullName>TSR_Second_Tier__c</fullName>
    <description>This is how much they need to sell to go from tier 1 to tier 2</description>
    <label>TSR Second Tier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>