force-app/main/default/objects/Sales_Target__c/fields/TSR_Third_Tier__c.field-meta.xml
<CustomField>
    <fullName>TSR_Third_Tier__c</fullName>
    <description>This is how much they need to sell to go from tier 2 to tier 3.</description>
    <label>TSR Third Tier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>