force-app/main/default/objects/Sales_Target__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Specifies the type of target. Used to have multiple targets per person in the case of Hybrid Managers. Set on target creation manually by Sales Ops or automatically if a target doesn&#39;t exist for a new Sales Credit.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rep</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>