force-app/main/default/objects/Sales_Target__c/fields/Unique_Target__c.field-meta.xml
<CustomField>
    <fullName>Unique_Target__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Ensures that the combination of Target Owner, Year, and Month are unique for each target.</description>
    <inlineHelpText>Ensures that the combination of Target Owner, Year, and Month are unique for each target.</inlineHelpText>
    <label>Unique Target</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>