force-app/main/default/objects/Sales_Target__c/fields/VP__c.field-meta.xml
<CustomField>
    <fullName>VP__c</fullName>
    <label>VP</label>
    <length>40</length>
    <type>Text</type>
</CustomField>