force-app/main/default/objects/Sales_Target__c/fields/VP_LL_Credit__c.field-meta.xml
<CustomField>
    <fullName>VP_LL_Credit__c</fullName>
    <label>VP LL Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>