force-app/main/default/objects/Sales_Target__c/fields/VP_Other_Credit__c.field-meta.xml
<CustomField>
    <fullName>VP_Other_Credit__c</fullName>
    <label>VP Other Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>