force-app/main/default/objects/Sales_Target__c/fields/VP_Sales_Total__c.field-meta.xml
<CustomField>
    <fullName>VP_Sales_Total__c</fullName>
    <label>VP Sales Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>