force-app/main/default/objects/Sales_Target__c/fields/VP_SRC_Revenue__c.field-meta.xml
<CustomField>
    <fullName>VP_SRC_Revenue__c</fullName>
    <label>VP SRC Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>