force-app/main/default/objects/Sales_Target__c/fields/VP_SRSR_Revenue__c.field-meta.xml
<CustomField>
    <fullName>VP_SRSR_Revenue__c</fullName>
    <label>VP SRSR Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>