force-app/main/default/objects/Sales_Target__c/fields/X18_Character_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Character_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Character ID</label>
    <type>Text</type>
</CustomField>