force-app/main/default/objects/Sales_Target__c/listViews/All2.listView-meta.xml
<ListView>
    <fullName>All2</fullName>
    <columns>NAME</columns>
    <columns>Total_Revenue_Credit__c</columns>
    <columns>Sales_Rep_Revenue_Credit__c</columns>
    <columns>Revenue_of_Target__c</columns>
    <columns>Bonus_Commission_Multiplier__c</columns>
    <columns>TSR_Bonus_Commission_Multiplier__c</columns>
    <columns>Sales_Rep_Tier_Qualify_Sales_Credit__c</columns>
    <columns>Target__c</columns>
    <columns>Actual_Credits__c</columns>
    <columns>Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Target_Date__c</columns>
    <columns>Owner_Role__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Palmer</value>
    </filters>
    <label>All2</label>
</ListView>