force-app/main/default/objects/Sales_Target__c/listViews/All_Sales_Targets.listView-meta.xml
<ListView>
    <fullName>All_Sales_Targets</fullName>
    <columns>NAME</columns>
    <columns>Owner__c</columns>
    <columns>Target_Date__c</columns>
    <columns>Activation_Percentage__c</columns>
    <columns>Actual_Credits__c</columns>
    <columns>Sales_Rep_SR_Revenue__c</columns>
    <columns>Team__c</columns>
    <columns>Revenue_To_Target__c</columns>
    <columns>Revenue_of_Target__c</columns>
    <columns>Bonus_Commission_Multiplier__c</columns>
    <columns>Sub_Team__c</columns>
    <columns>Comp_Plan__c</columns>
    <columns>Earned_Spiffs__c</columns>
    <columns>Earned_Commission__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target_Date__c</field>
        <operation>equals</operation>
        <value>8/1/2018</value>
    </filters>
    <filters>
        <field>Team__c</field>
        <operation>equals</operation>
        <value>Sales Rep</value>
    </filters>
    <filters>
        <field>Sub_Team__c</field>
        <operation>equals</operation>
        <value>Inside Sales,Territory Sales</value>
    </filters>
    <label>All Sales Targets</label>
</ListView>