force-app/main/default/objects/Sales_Target__c/listViews/Hybrid_Quotas.listView-meta.xml
<ListView>
    <fullName>Hybrid_Quotas</fullName>
    <columns>NAME</columns>
    <columns>Owner__c</columns>
    <columns>Sub_Team__c</columns>
    <columns>Target_Date__c</columns>
    <columns>Actual_Credits__c</columns>
    <columns>Target__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Shavonne,Morgan,Rachell,Liz,Amber,Jennifer,Kristin</value>
    </filters>
    <filters>
        <field>Target_Date__c</field>
        <operation>greaterThan</operation>
        <value>10/31/2016</value>
    </filters>
    <filters>
        <field>Owner_Name__c</field>
        <operation>notEqual</operation>
        <value>Amber Battaglia</value>
    </filters>
    <label>Hybrid Quotas</label>
    <sharedTo>
        <role>Sales_Operations</role>
    </sharedTo>
</ListView>