force-app/main/default/objects/Sales_Target__c/listViews/ISR_Managers_Quotas.listView-meta.xml
<ListView>
    <fullName>ISR_Managers_Quotas</fullName>
    <columns>NAME</columns>
    <columns>Owner__c</columns>
    <columns>Forecast__c</columns>
    <columns>Target_Date__c</columns>
    <columns>Actual_Credits__c</columns>
    <columns>Target__c</columns>
    <columns>Revenue_Target__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sub_Team__c</field>
        <operation>equals</operation>
        <value>Senior Account Executive Manager,Inside Sales Director</value>
    </filters>
    <filters>
        <field>Target_Year__c</field>
        <operation>equals</operation>
        <value>2017</value>
    </filters>
    <filters>
        <field>Target_Month__c</field>
        <operation>equals</operation>
        <value>november</value>
    </filters>
    <label>ISR Managers Quotas</label>
    <sharedTo>
        <group>Sales_Ops</group>
    </sharedTo>
</ListView>