force-app/main/default/objects/Sales_Target__c/listViews/VP_Targets_16.listView-meta.xml
<ListView>
    <fullName>VP_Targets_16</fullName>
    <columns>NAME</columns>
    <columns>Target_Date__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Revenue_Target__c</columns>
    <columns>Target__c</columns>
    <columns>Sales_to_Target__c</columns>
    <columns>VP_SR_Credit__c</columns>
    <columns>Total_Revenue_Credit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Paul,Tennli,Abe,Darrell,zachary</value>
    </filters>
    <filters>
        <field>Target_Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <label>VP Targets - 2016</label>
</ListView>